--- a/app/src/main/res/layout/activity_davatelj_oglasa.xml
+++ b/app/src/main/res/layout/activity_davatelj_oglasa.xml
@@ -25,13 +25,14 @@
         app:layout_constraintTop_toBottomOf="@+id/recycleViewOglasiPonude"
         android:layout_marginBottom="12sp"
         android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"/>
+        android:layout_marginEnd="25dp"
+        android:backgroundTint="#1E88E5"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/botomNavigationProvider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:backgroundTint="#808080"
+        app:backgroundTint="@color/white"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,7 +52,10 @@
         app:layout_constraintBottom_toBottomOf="@+id/recycleViewOglasiPonude"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recycleViewOglasiPonude" />
+        app:layout_constraintTop_toTopOf="@+id/recycleViewOglasiPonude"
+        android:textColor="@color/black"
+        android:background="@drawable/layout_bg"
+        android:padding="15dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
