--- a/app/src/main/res/layout/dialog_oznaci_kao_odradeno.xml
+++ b/app/src/main/res/layout/dialog_oznaci_kao_odradeno.xml
@@ -3,8 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_margin="10dp">
 
     <TextView
         android:id="@+id/textView4"
@@ -15,5 +16,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="18dp"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:padding="15dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
