--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -13,7 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/layout_bg"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,17 +27,19 @@
             android:layout_marginEnd="10dp">
             <TextView
                 android:id="@+id/textViewNaslov"
-                android:layout_width="300dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:textColor="@color/black"/>
             <TextView
                 android:id="@+id/textViewKvadratura"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:textAlignment="viewEnd"
                 android:text=""
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:textColor="@color/black"/>
         </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Opis: "
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/textViewOpis"
@@ -56,7 +63,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
     </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,14 +79,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
         <TextView
             android:id="@+id/textViewUlica"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,14 +103,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
         <TextView
             android:id="@+id/textViewVrijeme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
         </LinearLayout>
         <TextView
             android:id="@+id/textViewKontakt"
@@ -110,7 +122,8 @@
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:text="TextView"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/buttonPrijaviSeZaOglas"
@@ -119,14 +132,11 @@
             android:layout_weight="1"
             android:text="Prijavi se za oglas"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp"
+            android:backgroundTint="#1E88E5"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="#0000FF"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
