--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true"
-        android:color="@android:color/black"/>
+        android:color="#1E88E5"/>
 
     <item android:state_selected="false"
-        android:color="@android:color/white"/>
+        android:color="@android:color/black"/>
 
 </selector>
