--- a/app/src/main/res/layout/activity_done_job_cleaner.xml
+++ b/app/src/main/res/layout/activity_done_job_cleaner.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottomNavigationCleaner"
-        app:backgroundTint="#808080"
+        app:backgroundTint="@color/white"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,5 +38,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/recycleViewDoneJob"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recycleViewDoneJob" />
+        app:layout_constraintTop_toTopOf="@+id/recycleViewDoneJob"
+        android:textColor="@color/black"
+        android:background="@drawable/layout_bg"
+        android:padding="15dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
