--- a/app/src/main/res/layout/activity_kreiraj_ponudu_cistac.xml
+++ b/app/src/main/res/layout/activity_kreiraj_ponudu_cistac.xml
@@ -6,218 +6,252 @@
     android:layout_height="match_parent"
     tools:context=".CreateOfferCleanerActivity">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Kreiraj ponudu za oglas"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/layout_bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="30dp"
-        android:layout_marginTop="70dp"/>
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp">
 
-    <TextView
-        android:id="@+id/textViewNaslov"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="20dp"
-        android:text="TextView"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="Kreiraj ponudu za oglas"
+            android:textColor="@color/black"
+            android:textSize="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textOpis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Opis: "
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNaslov"
-        app:layout_constraintEnd_toStartOf="@+id/textViewOpis"
-        android:layout_marginTop="15dp"
-        android:paddingRight="10dp"
-        android:textSize="20dp" />
+        <TextView
+            android:id="@+id/textViewNaslov"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <TextView
-        android:id="@+id/textViewOpis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="TextView"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textOpis"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNaslov" />
+        <TextView
+            android:id="@+id/textOpis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="20dp"
+            android:text="Opis: "
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewNaslov" />
 
-    <TextView
-        android:id="@+id/textGrad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Grad:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewOpis"
-        android:layout_marginTop="15dp"
-        android:textSize="20dp"
-        android:layout_marginStart="50dp"/>
+        <TextView
+            android:id="@+id/textViewOpis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textOpis" />
 
-    <TextView
-        android:id="@+id/textViewGrad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textGrad"
-        app:layout_constraintTop_toBottomOf="@+id/textViewOpis"
-        android:layout_marginTop="15dp"
-        android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/textGrad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:text="Grad->"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewOpis" />
 
-    <TextView
-        android:id="@+id/textUlica"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ulica:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textGrad"
-        android:layout_marginTop="15dp"
-        android:textSize="20dp"
-        android:layout_marginStart="50dp"/>
+        <TextView
+            android:id="@+id/textViewGrad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textGrad"
+            app:layout_constraintTop_toBottomOf="@+id/textViewOpis" />
 
-    <TextView
-        android:id="@+id/textViewUlica"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textUlica"
-        app:layout_constraintTop_toBottomOf="@+id/textGrad"
-        android:layout_marginTop="15dp"
-        android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/textUlica"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:text="Ulica->"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textGrad" />
 
-    <TextView
-        android:id="@+id/textDatumIVrijeme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="15dp"
-        android:text="Datum i vrijeme:"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUlica" />
+        <TextView
+            android:id="@+id/textViewUlica"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textUlica"
+            app:layout_constraintTop_toBottomOf="@+id/textGrad" />
 
-    <TextView
-        android:id="@+id/textViewDatum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/textDatumIVrijeme"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUlica"
-        android:layout_marginTop="15dp"
-        android:textSize="20dp"
-        android:layout_marginStart="10dp"/>
+        <TextView
+            android:id="@+id/textDatumIVrijeme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="12dp"
+            android:text="Datum i vrijeme->"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewUlica" />
 
-    <TextView
-        android:id="@+id/textViewVrijeme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/textViewDatum"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUlica"
-        android:layout_marginTop="15dp"
-        android:textSize="20dp"
-        android:layout_marginStart="10dp"/>
+        <TextView
+            android:id="@+id/textViewDatum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toEndOf="@+id/textDatumIVrijeme"
+            app:layout_constraintTop_toBottomOf="@+id/textViewUlica" />
 
-    <TextView
-        android:id="@+id/textKontak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:textSize="20dp"
-        android:layout_marginStart="50dp"
-        android:text="Kontakt:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textDatumIVrijeme" />
+        <TextView
+            android:id="@+id/textViewVrijeme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toEndOf="@+id/textViewDatum"
+            app:layout_constraintTop_toBottomOf="@+id/textViewUlica" />
 
-    <TextView
-        android:id="@+id/textViewKontakt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="TextView"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textKontak"
-        app:layout_constraintTop_toBottomOf="@+id/textDatumIVrijeme" />
-    <TextView
-        android:id="@+id/textKvadratura"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Kvadratura stana: "
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textKontak"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="50dp"
-        android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/textKontak"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:text="Kontakt->"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textDatumIVrijeme" />
 
-    <TextView
-        android:id="@+id/textViewKvadratura"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="TextView"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textKvadratura"
-        app:layout_constraintTop_toBottomOf="@+id/textKontak" />
+        <TextView
+            android:id="@+id/textViewKontakt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textKontak"
+            app:layout_constraintTop_toBottomOf="@+id/textDatumIVrijeme" />
 
-    <TextView
-        android:id="@+id/textPonudiCijenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cijena-> (kn/h): "
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textKvadratura"
-        android:layout_marginTop="22dp"
-        android:textSize="20dp"
-        android:layout_marginStart="50dp"/>
+        <TextView
+            android:id="@+id/textKvadratura"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:text="Kvadratura stana-> "
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textKontak" />
 
-    <EditText
-        android:id="@+id/editTextCijena"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        app:layout_constraintStart_toEndOf="@+id/textPonudiCijenu"
-        app:layout_constraintTop_toBottomOf="@+id/textKvadratura"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="60dp"/>
+        <TextView
+            android:id="@+id/textViewKvadratura"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textKvadratura"
+            app:layout_constraintTop_toBottomOf="@+id/textKontak" />
 
-    <Button
-        android:id="@+id/buttonPošaljiPonudu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pošalji"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="10dp"/>
+        <TextView
+            android:id="@+id/textPonudiCijenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="22dp"
+            android:text="Cijena-> (kn/h)-> "
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textKvadratura" />
 
-    <TextView
-        android:id="@+id/textVieID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="123dp"
-        tools:layout_editor_absoluteY="546dp"
-        android:visibility="invisible"/>
+        <EditText
+            android:id="@+id/editTextCijena"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="15dp"
+            android:backgroundTint="@color/black"
+            android:inputType="number"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toEndOf="@+id/textPonudiCijenu"
+            app:layout_constraintTop_toBottomOf="@+id/textKvadratura" />
 
-    <TextView
-        android:id="@+id/textViewProviderID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="546dp"
-        android:visibility="invisible"/>
+        <Button
+            android:id="@+id/buttonPošaljiPonudu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="#1E88E5"
+            android:text="Pošalji"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textPonudiCijenu" />
+
+        <TextView
+            android:id="@+id/textVieID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:visibility="invisible"
+            tools:layout_editor_absoluteX="124dp"
+            tools:layout_editor_absoluteY="527dp" />
+
+        <TextView
+            android:id="@+id/textViewProviderID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:visibility="invisible"
+            tools:layout_editor_absoluteX="205dp"
+            tools:layout_editor_absoluteY="527dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
