--- a/app/src/main/res/layout/activity_old_ads.xml
+++ b/app/src/main/res/layout/activity_old_ads.xml
@@ -10,7 +10,7 @@
         android:id="@+id/botomNavigationProvider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:backgroundTint="#808080"
+        app:backgroundTint="@color/white"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,6 +35,9 @@
         app:layout_constraintBottom_toTopOf="@+id/botomNavigationProvider"
         app:layout_constraintEnd_toEndOf="@+id/recycleViewStariOglasi"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recycleViewStariOglasi" />
+        app:layout_constraintTop_toTopOf="@+id/recycleViewStariOglasi"
+        android:textColor="@color/black"
+        android:background="@drawable/layout_bg"
+        android:padding="15dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
